Prevent edge of screen clipping of drop down menu

--- a/app/assets/stylesheets/bulma_with_customizations.scss
+++ b/app/assets/stylesheets/bulma_with_customizations.scss
@@ -16,9 +16,6 @@ $footer-background-color: none;
 // Bulma
 @import "bulma";
 
-.container {
-  max-width: $desktop + (2 * $gap);
-}
 html {
   height: 100vh;
 }
